# attenuation

./: Apptainer.def  CMakeLists.txt  README.md  main.cc
.github/workflows/: ci.yml
include/: DetectorConstruction.hh  DetectorMessenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  WriteOutputFile.hh
macro/: unit.mac  vis.mac
src/: DetectorConstruction.cc  DetectorConstruction.cc~  DetectorMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  SteppingAction.cc~  WriteOutputFile.cc
